--- a/src/components/SeasonSelectedModal/SeasonSelectedModal.module.scss
+++ b/src/components/SeasonSelectedModal/SeasonSelectedModal.module.scss
@@ -28,12 +28,16 @@
   background-color: transparent;
   font-size: 32px;
   font-weight: 900;
+  z-index: 2;
+
+
   &:hover {
     background-color: transparent;
   }
   @media (max-width: $breakpoint-mobile) {
-    top: 17px;
-    right: 4px;
+
+    top: 20px;
+    right: 15px;
   }
 }
 .selectedShowTitle {
@@ -41,9 +45,10 @@
   font-size: 21px;
   font-weight: 800;
   position: relative;
+  text-align: center;
+
   padding: 15px 0;
   @media (max-width: $breakpoint-mobile) {
-    text-align: center;
     margin-bottom: 20px;
   }
 }
